--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<a href="#projects">For Sponsorship And Registration</a>
 				</li>
 				<li>
-					<a href="mailto:hello@adriantwarog.com" class="button">Register Now</a>
+					<a href="#" class="button register-btn">Register Now</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -62,7 +62,7 @@
 					ADVOCATES & CHANGEMAKERS</p>
 				<p class="hero-desc">Celebrate Heritage. Tackle Key Issues. Shape the Future Together</p>	
 				<div class="call-to-action">
-					<a href="mailto:odedahay@yahoo.com" class="button">Register Now</a>
+					<a href="#" class="button register-btn">Register Now</a>
 				</div>
 			</div>
 			<div class="hero-yellow">
@@ -82,7 +82,7 @@
 					</ul>
 					<h3 class="mb-sm">Gala</h3>
 					<div class="call-to-action">
-						<a href="mailto:odedahay@yahoo.com" class="button outline">View Full Schedule</a>
+						<a href="#" class="button register-btn">View Full Schedule</a>
 					</div>
 				</div>
 				<!-- <div class="right-column">
@@ -167,11 +167,11 @@
 	<section class="full-width-blue">
 		<section class="work-experience container">
 			<h2>Ready to Be Part of Something Greater?</h2>
-			<p>Don’t miss your chance to connect, learn, and celebrate with the Filipino-Canadian community’s brightest minds.
+			<p>Don't miss your chance to connect, learn, and celebrate with the Filipino-Canadian community's brightest minds.
 				Limited spots available!</p>
 			
 				<div class="call-to-action">
-					<a href="mailto:odedahay@yahoo.com" class="button">Register Now</a>
+					<a href="#" class="button register-btn">Register Now</a>
 				</div>
 		</section>
 	</section>
@@ -180,6 +180,41 @@
 			<p>Copyright © 2025 FCNC</p>
 		</section>
 	</section>
+
+	<!-- Registration Modal -->
+	<div id="registrationModal" class="modal">
+		<div class="modal-content">
+			<span class="close-modal">&times;</span>
+			<h2 class="title">Registration fee via e-transfer to:</h2>
+			<p> finance@fcnccanada.org</p>
+			<!-- <form id="registrationForm">
+				<div class="form-group">
+					<label for="name">Full Name</label>
+					<input type="text" id="name" name="name" required>
+				</div>
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input type="email" id="email" name="email" required>
+				</div>
+				<div class="form-group">
+					<label for="phone">Phone Number</label>
+					<input type="tel" id="phone" name="phone" required>
+				</div>
+				<div class="form-group">
+					<label for="ticketType">Ticket Type</label>
+					<select id="ticketType" name="ticketType" required>
+						<option value="">Select Ticket Type</option>
+						<option value="regular">Regular Ticket</option>
+						<option value="vip">VIP Ticket</option>
+						<option value="sponsor">Sponsor Package</option>
+					</select>
+				</div>
+				<button type="submit" class="button">Submit Registration</button>
+			</form> -->
+		</div>
+	</div>
+
+	<script src="./scripts.js"></script>
 </body>
 </html>
 
