--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					</ul>
 					<h3 class="mb-sm">Gala</h3>
 					<div class="call-to-action">
-						<a href="#" class="button register-btn">View Full Schedule</a>
+						<a href="#" class="button register-btn outline">View Full Schedule</a>
 					</div>
 				</div>
 				<!-- <div class="right-column">
@@ -186,7 +186,7 @@
 		<div class="modal-content">
 			<span class="close-modal">&times;</span>
 			<h2 class="title">Registration fee via e-transfer to:</h2>
-			<p> finance@fcnccanada.org</p>
+			<p class="emailbox"> finance@fcnccanada.org</p>
 			<!-- <form id="registrationForm">
 				<div class="form-group">
 					<label for="name">Full Name</label>
