added event schedule

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					</ul>
 					<h3 class="mb-sm">Gala</h3>
 					<div class="call-to-action">
-						<a href="#" class="button register-btn outline">View Full Schedule</a>
+						<a href="#" class="button outline schedule-btn">View Full Schedule</a>
 					</div>
 				</div>
 				<!-- <div class="right-column">
@@ -210,30 +210,110 @@
 			<span class="close-modal">&times;</span>
 			<h2 class="title">Registration fee via e-transfer to:</h2>
 			<p class="emailbox"> finance@fcnccanada.org</p>
-			<!-- <form id="registrationForm">
-				<div class="form-group">
-					<label for="name">Full Name</label>
-					<input type="text" id="name" name="name" required>
+		</div>
+	</div>
+
+	<!-- Schedule Modal -->
+	<div id="scheduleModal" class="modal">
+		<div class="modal-content extrawidth">
+			<span class="close-modal">&times;</span>
+			<h2>Event Schedule</h2>
+			<p>With a focus on leadership, collaboration, innovation, and partnership, this year’s event will
+				explore on four impactful topics:
+				 </p>
+			<div class="schedule-content">
+				<div class="schedule-section">
+					<h3>Plenary Session 1: Empowering Filipino Canadians: Leading with Vision, Building with Purpose</h3>
+					<p>Emphasizes visionary leadership and purposeful action to build a brighter future for Filipino-Canadians, fostering community growth and development</p>
+					<h4>Takeaways:</h4>
+					<ul>
+						<li>Vision-Driven Leadership: Effective leaders have a clear and compelling vision that
+							inspires community engagement and drives collective progress.</li>
+						<li>Purposeful Action: Success is achieved through intentional strategies that address the
+							specific needs of Filipino Canadians.</li>
+						<li>Mentorship Matters: Building a culture of mentorship is essential in nurturing emerging
+							leaders and creating a sustainable leadership pipeline.</li>
+					</ul>
+					<h3>Plenary Session 2: Together We Thrive: Championing Filipino Leadership in Canada</h3>
+					<p>Highlights the power of unity, collaboration, and collective achievements in building thriving
+						communities across Canada.</p>
+					<h4>Takeaways:</h4>
+					<ul>
+						<li>Power of Collaboration: Inclusive and collective leadership fosters stronger, more
+							resilient communities.</li>
+						<li>Networking for Growth: Establishing connections among leaders from various regions
+							amplifies opportunities for knowledge sharing and resource pooling.</li>
+						<li>Community Engagement: Filipino-Canadian leaders thrive when they actively engage
+							and empower their communities to co-create solutions.</li>
+					</ul>
+					<h4>Breakout Session 1:</h4>
+					<p>Objective: To explore how Filipino leaders can adopt a visionary approach while taking
+						purposeful actions to drive community development and personal leadership growth.</p>
+						<h4>Discussion Points:</h4>
+					<ul>
+						<li>Defining visionary leadership in the Filipino-Canadian context</li>
+						<li>Strategies for setting purposeful goals aligned with community needs</li>
+						<li>Building mentorship programs to inspire emerging leaders</li>
+						<li>Sharing success stories of Filipino Canadians leading with impact</li>
+					</ul>
+					<h4>Vision Mapping:</h4> 
+					<p>Participants will create a strategic vision board for leadership initiatives in their
+communities.</p>
+					<h3>Plenary Session 3: Trailblazing the Future: Empowering Communities, Driving Change</h3>
+					<p>Objective: Focuses on innovation, progress, and transformative leadership as Filipino Canadians
+						drive positive change and forge new pathways for future generations.</p>
+						 
+					<h4>Takeaways:</h4>
+					<ul>
+					<li>Innovation as a Catalyst: Embracing emerging trends and technological advancements
+						fosters transformative leadership and community solutions.</li>
+					<li>Youth Empowerment: The next generation plays a critical role in shaping the future of
+						Filipino leadership in Canada.</li>
+					<li>Resilience Amid Challenges: Leaders must adapt and remain innovative to navigate
+						complex community and societal challenges.</li>
+					</ul>
+					<h3>Plenary Session 4: Catalysts for Change: Building Leadership Capacities and Strategic Alliances</h3>
+					<p>Objective: Centers on equipping Filipino leaders with tools to drive impactful change while
+					fostering partnerships and forming alliances with like-minded organizations.</p>
+
+					<h4>Takeaways:</h4>
+					<ul>
+						<li>Strategic Partnerships: Collaborations with non-profits and advocacy groups enhance
+					leadership impact and community reach.</li>
+						<li>Capacity Building: Continuous learning and development strengthen leadership
+						capabilities and foster adaptive leaders.</li>
+						<li>Shared Resources and Goals: Working together with aligned objectives maximizes
+						community benefits and organizational success</li>
+						</ul>
+					<p>Each topic reflects our ongoing commitment to advocating for the Filipino diaspora across
+						Canada while fostering leadership capacities among Filipino Canadians, promoting collaboration
+						and meaningful contributions to society.</p>
+					
+						<h4>Breakout Session 2</h4>
+					<p>Objective: To highlight the importance of collaboration and community-driven initiatives in
+					fostering leadership and unity among Filipino Canadians.</p>
+
+					<h4>Discussion Points:</h4>
+					<ul>
+						<li>Identifying collaborative leadership models that work within diverse communities</li>
+						<li>Creating inclusive spaces for collective decision-making</li>
+						<li>Networking strategies to connect leaders across regions</li>
+						<li>Showcasing successful community projects born out of collaboration</li>
+					</ul>
+					<h4>Activity:</h4>		
+					<p>Collaborative Roundtable: Teams brainstorm and pitch actionable community projects.</p>
 				</div>
-				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email" required>
-				</div>
-				<div class="form-group">
-					<label for="phone">Phone Number</label>
-					<input type="tel" id="phone" name="phone" required>
-				</div>
-				<div class="form-group">
-					<label for="ticketType">Ticket Type</label>
-					<select id="ticketType" name="ticketType" required>
-						<option value="">Select Ticket Type</option>
-						<option value="regular">Regular Ticket</option>
-						<option value="vip">VIP Ticket</option>
-						<option value="sponsor">Sponsor Package</option>
-					</select>
-				</div>
-				<button type="submit" class="button">Submit Registration</button>
-			</form> -->
+				<!-- <div class="schedule-section">
+					<h3>Gala</h3> -->
+					<!-- <ul>
+						<li>6:00 PM - Registration and Cocktail Reception</li>
+						<li>7:00 PM - Dinner and Program</li>
+						<li>8:00 PM - Awards and Recognition</li>
+						<li>9:00 PM - Entertainment and Networking</li>
+						<li>11:00 PM - Event Conclusion</li>
+					</ul> -->
+				<!-- </div> -->
+			</div>
 		</div>
 	</div>
 
