--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<h3 class="subtitle">Sponsorship  Packages</h3>
 			<div class="jobs">
 				<article>
-					<h3>GOLD SPONSOR – $5,000</h3>
+					<h3 class="sponsor-price"><span class="gold">GOLD SPONSOR</span> – $5,000</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Gold Sponsor</li>
 						<li>Logo placement on our website, social media post and event program.</li>
@@ -113,7 +113,7 @@
 				</article>
 				<article>
 					
-					<h3>SILVER SPONSOR – $3,000</h3>
+					<h3 class="sponsor-price"><span class="silver">SILVER SPONSOR</span> – $3,000</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Silver Sponsor</li>
 						<li>Logo placement on our website, social media post and event program</li>
@@ -123,7 +123,7 @@
 				</article>
 				<article>
 				
-					<h3>BRONZE SPONSOR – $2,000</h3>
+					<h3 class="sponsor-price"><span class="bronze">BRONZE SPONSOR</span> – $2,000</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Bronze Sponsor</li>
 						<li>Logo placement on our website, social media post and event program</li>
