Enhanced responsiveness of the hero section by adding a mobile banner image and adjusting styles for various screen sizes. Updated font sizes and padding for better mobile display.

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 	<main>
 		<section class="hero container">
 			<div class="hero-banner">
-				<img src="/imgs/hero-banner.jpg" />
+				<img src="/imgs/hero-banner.jpg" class="desktop-banner" alt="FCNC Convention Banner" />
+				<img src="/imgs/hero-banner-mobile.jpg" class="mobile-banner" alt="FCNC Convention Banner Mobile" />
 			</div>
-		
 		</section>
 		<section class="hero container">
 			<div class="hero-blue">
@@ -218,7 +218,7 @@
 		<div class="modal-content extrawidth">
 			<span class="close-modal">&times;</span>
 			<h2>Event Schedule</h2>
-			<p>With a focus on leadership, collaboration, innovation, and partnership, this year’s event will
+			<p>With a focus on leadership, collaboration, innovation, and partnership, this year's event will
 				explore on four impactful topics:
 				 </p>
 			<div class="schedule-content">
