Update registration link, add ticket pricing details, and enhance styles for better presentation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="#sponsorship">For Sponsorship And Registration</a>
 				</li>
 				<li>
-					<a href="#" class="button register-btn">Register Now</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfLd-tY0wqTeK5qQrr9YFCpMyZDBiHVkqqFsCObTgmFV_8_fg/viewform" class="button register-btn_">Register Now</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -60,6 +60,12 @@
 				<p class="hero-subtopic">FILIPINO-CANADIAN LEADERS, 
 					ADVOCATES & CHANGEMAKERS</p>
 				<p class="hero-desc">Celebrate Heritage. Tackle Key Issues. Shape the Future Together</p>	
+				<div class="ticket">
+					<h4>Convention & Gala Package:</h4>
+					<p>Early Registration Fee: 	$130 (Available until June 30th) </p>
+					<p>Regular Registration Fee: $150 (From July 1st to August 16th)</p>
+				</div>
+
 				<div class="call-to-action">
 					<a href="#" class="button register-btn">Register Now</a>
 				</div>
@@ -69,18 +75,17 @@
 					<div class="slider">
 						<div class="slide active">
 							<img src="/imgs/fcnc-img1.png" alt="FCNC Convention Image 1" />
-							<div class="slide-description">The Filipino Canadian National Congress (FCNC)  - Ottawa</div>
+							<div class="slide-description">FCNC 1st Annual Leadership Convention & National Gala Ottawa, ON 2022</div>
 						</div>
 						
 						<div class="slide">
-							<img src="/imgs/fcnc-img3.png" alt="FCNC Convention Image 3" />
-							<div class="slide-description">The Filipino Canadian National Congress (FCNC)  - Halifax</div>
+							<img src="/imgs/fcnc-img2.png" alt="FCNC Convention Image 3" />
+							<div class="slide-description">FCNC 2nd Annual Leadership Convention & National Gala Halifax, NS 2023</div>
 						</div>
 						<div class="slide">
-							<img src="/imgs/fcnc-img2.png" alt="FCNC Convention Image 2" />
-							<div class="slide-description">The Filipino Canadian National Congress (FCNC)  - Winnepeg</div>
+							<img src="/imgs/fcnc-img3.png" alt="FCNC Convention Image 2" />
+							<div class="slide-description">FCNC 3rd Annual Leadership Convention & National Gala Manitob, MB 2024</div>
 						</div>
-						
 					</div>
 					<div class="slider-controls">
 						<button class="prev-btn"><i class="fa-solid fa-arrow-left"></i></button>
