Fix typo in slide description for FCNC 3rd Annual Leadership Convention & National Gala in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</div>
 						<div class="slide">
 							<img src="/imgs/fcnc-img3.png" alt="FCNC Convention Image 2" />
-							<div class="slide-description">FCNC 3rd Annual Leadership Convention & National Gala Manitob, MB 2024</div>
+							<div class="slide-description">FCNC 3rd Annual Leadership Convention & National Gala Manitoba, MB 2024</div>
 						</div>
 					</div>
 					<div class="slider-controls">
