Add footer section with copyright and design credits, and enhance styles for footer responsiveness

--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
 				</article>
 				
 			</div>
-			<p>Copyright © 2025 FCNC</p>
+			<div class="footer-copyright">
+				<p>Copyright © 2025 FCNC</p>
+				<p>Design & development by <a href="https://roddahay.netlify.app/" target="_blank">Rod Dahay</a></p>
+			</div>
 		</section>
 	</section>
 
