Update registration link in index.html and modify .DS_Store file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="#sponsorship">For Sponsorship And Registration</a>
 				</li>
 				<li>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfLd-tY0wqTeK5qQrr9YFCpMyZDBiHVkqqFsCObTgmFV_8_fg/viewform" class="button register-btn_">Register Now</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog" class="button register-btn_" target="_blank">Register Now</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
