Enhance sponsorship section in index.html by adding icons for Gold, Silver, and Bronze sponsors, and update styles for better layout and responsiveness. Introduce new SVG icons for each sponsorship level and adjust CSS for improved alignment and spacing.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,11 @@
 			<h3 class="subtitle">Sponsorship  Packages</h3>
 			<div class="jobs">
 				<article>
-					<h3 class="sponsor-price"><span class="gold">GOLD SPONSOR</span> – $5,000</h3>
+					<h3 class="sponsor-price">
+						<img src="imgs/gold-icon.svg" alt="Gold Sponsor" class="sponsor-icon">
+						<span class="gold">GOLD SPONSOR</span>
+						– $5,000
+						</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Gold Sponsor</li>
 						<li>Logo placement on our website, social media post and event program.</li>
@@ -145,7 +149,11 @@
 				</article>
 				<article>
 					
-					<h3 class="sponsor-price"><span class="silver">SILVER SPONSOR</span> – $3,000</h3>
+					<h3 class="sponsor-price">
+						<img src="imgs/silver-icon.svg" alt="Silver Sponsor" class="sponsor-icon">
+						<span class="silver">SILVER SPONSOR</span>
+						 – $3,000
+					</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Silver Sponsor</li>
 						<li>Logo placement on our website, social media post and event program</li>
@@ -155,7 +163,11 @@
 				</article>
 				<article>
 				
-					<h3 class="sponsor-price"><span class="bronze">BRONZE SPONSOR</span> – $2,000</h3>
+					<h3 class="sponsor-price">
+						<img src="imgs/bronse-icon.svg" alt="Bronse Sponsor" class="sponsor-icon">
+						<span class="bronze">BRONZE SPONSOR</span>
+						 – $2,000
+					</h3>
 					<ul class="sponsor">
 						<li>Official recognition as a Bronze Sponsor</li>
 						<li>Logo placement on our website, social media post and event program</li>
