Update registration button class in index.html, correct contact number for FCNC Director, and modify binary files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				</div>
 
 				<div class="call-to-action">
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog" class="button register-btn_" target="_blank">Register Now</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog" class="button register-btn" target="_blank">Register Now</a>
 				</div>
 			</div>
 			<div class="hero-yellow">
@@ -198,7 +198,7 @@
 						<p>FCNC Director / Edmonton AB </p>
 					</div>
 					<ul class="leader-contact">
-						<li>AB / (403) 721 0023</li>
+						<li>AB / (587) 988-9538</li>
 						<li>vnsumalinog@yahoo.ca</li>
 					</ul>
 				</article>
