Refactor registration details in index.html: update package description and simplify pricing information for clarity.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 					ADVOCATES & CHANGEMAKERS</p>
 				<p class="hero-desc">Celebrate Heritage. Tackle Key Issues. Shape the Future Together</p>	
 				<div class="ticket">
-					<h4>Convention & Gala Package:</h4>
-					<p>Early Registration Fee: 	$130 (Available until June 30th) </p>
-					<p>Regular Registration Fee: $150 (From July 1st to August 16th)</p>
+					<h4 style="font-weight: 500; font-size: 1rem; margin-bottom: 5px;">Convention & Gala Package:</h4>
+					<!-- <p>Early Registration Fee: 	$130 (Available until June 30th) </p> -->
+					<p style="font-size: 1rem;"><strong>Registration fee: $150 per person</strong></p>
 				</div>
 
 				<div class="call-to-action">
