Updated images for speaker profile

--- a/index.html
+++ b/index.html
@@ -100,16 +100,96 @@
 			</div>
 		</section>
 		<section id="schedule" class="event container">
-			<h2>Event Schedule</h2>
+			<h2>Event</h2>
 			<div class="holder-blue">
 				<div class="left-column">
-					<h3>Convention</h3>
-					<ul>
-						<li>Plenary Session 1: Empowering Filipino Canadians: Leading with Vision, Building with Purpose</li>
-						<li>Plenary Session 2: Together We Thrive: Championing Filipino Leadership in Canada</li>
-						<li>Plenary Session 3: Trailblazing the Future: Empowering Communities, Driving Change</li>
-						<li>Plenary Session 4: Catalysts for Change: Building Leadership Capacities and Strategic Alliances</li>
-					</ul>
+					<h3>2025 convention keynote speakers</h3>
+					<!-- Keynote Speakers start here. -->
+					 					<div class="keynote-speakers">
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-2-richard.jpg" alt="Richard Sampang" class="speaker-detail-1-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Richard Sampang</h4>
+					      <p>Richard Sampang is an accomplished leader with over 18 years of leadership experience, including 13 years dedicated to non-profit organization.</p>
+					      <a href="#" class="speaker-detail-1-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-3-mable.jpg" alt="MLA Mable Elmore" class="speaker-detail-2-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>MLA Mable Elmore</h4>
+					      <p>Mable Elmore is the Deputy Speaker of the Legislative Assembly of British Columbia, the first person of Asian heritage to hold this position.</p>
+					      <a href="#" class="speaker-detail-2-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-1-flordeliz.jpg" alt="Senator Flordeliz (Gigi) Osler" class="speaker-detail-3-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Senator Flordeliz (Gigi) Osler</h4>
+						  <p>Senator Osler was appointer to the Senate of Canada on September 26, 2022.</p>
+					      <a href="#"class="speaker-detail-3-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-7-christina.jpg" alt="Cristina Balamban" class="speaker-detail-4-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Cristina Balamban</h4>
+					      <p>Cristina Balamban is an accomplished HR professional with over 20 years of combined experience in the non-profit and corporate sectors in both Canadan and the Philippines.</p>
+					      <a href="#" class="speaker-detail-4-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-4-monica.jpg" alt="Dr. Monica Anne Batac" class="speaker-detail-5-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Dr. Monica Anne Batac</h4>
+					      <p>Monica Anne Batac is an Assistant Professor at the Faculty of Social Work, University of Manitoba.</p>
+					      <a href="#" class="speaker-detail-5-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-6-jeela.jpg" alt="Dr. Jeela Acedo" class="speaker-detail-6-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Dr. Jeella Acedo</h4>
+					      <p>Dr. Jeella is an Associate Professor at Mount Royal University (MRU) and an Adjunct Professor at the University of Calgary.</p>
+					      <a href="#" class="speaker-detail-6-btn">› Read More</a>
+					    </div>
+					  </div>
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-5-melanie.jpg" alt="Dr. Melanie Quimson" class="speaker-detail-7-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>Dr. Melanie Quimson</h4>
+					      <p>Melanie Quimson is an educator, community advocate, and the newly crowned Ms. World Universal 2025, proudly representing Canada in Phuket, Thailand.</p>
+					      <a href="#"class="speaker-detail-7-btn">› Read More</a>
+					    </div>
+					  </div>
+					  
+
+					  <div class="speaker-card">
+					    <div class="speaker-image">
+					      <img src="/imgs/speaker-8-mla.jpg" alt="MLA Tany Yao"  class="speaker-detail-8-btn speaker-img-cursor">
+					    </div>
+					    <div class="speaker-info">
+					      <h4>MLA Tany Yao</h4>
+					      <p>Tany Yao was first elected as the Member of the Legislative Assembly for Fort McMurray-Wood Buffalo on May 5, 2015, and re-elected on April 2019, and May 29, 2023.</p>
+					      <a href="#"class="speaker-detail-8-btn">› Read More</a>
+					    </div>
+					  </div>
+					</div>
+					 <!-- Keynote Speakers end here-->
 					<h3 class="mb-sm">Gala</h3>
 					<div class="call-to-action">
 						<a href="#" class="button outline schedule-btn">View Full Schedule</a>
@@ -366,6 +446,64 @@ communities.</p>
 		</div>
 	</div>
 
+	<!-- Speakers Modal -->
+	<div id="speaker1_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-1-richard.jpeg" alt="Richard Sampang" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker2_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-2-mable.jpeg" alt="MLA Mable Elmore" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker3_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-3-flordeliz.jpeg" alt="Senator Flordeliz (Gigi) Osler" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker4_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-4-cristina.jpeg" alt="Cristina Balamban" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker5_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-5-monica.jpeg" alt="Monica Anne Batac" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker6_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-6-jeella.jpeg" alt="Dr. Jeela Acedo" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker7_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-7-melanie.jpeg" alt="Dr. Melanie Quimson" class="speaker-image">
+		</div>
+	</div>
+	<!-- Speakers Modal -->
+	<div id="speaker8_Modal" class="modal">
+		<div class="modal-content speaker-content">
+			<span class="close-modal">&times;</span>
+			<img src="/imgs/speaker-details-8-tany.jpeg" alt="MLA Tany Yao" class="speaker-image">
+		</div>
+	</div>
+
+	
 	<script src="./scripts.js"></script>
 </body>
 </html>
