Added Meta Descriptions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>FCNC | ANNUAL FCNC LEADERSHIP CONVENTION & NATIONAL GALA</title>
+		<meta name="description" content="Join us in Calgary on August 16, 2025 for the 4th Annual FCNC Leadership Convention & National Gala. Explore the full program schedule, keynote speakers, sponsorships, and registration details.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="FCNC | Annual Leadership Convention & National Gala 2025">
+	<meta property="og:description" content="Keynotes, breakout sessions, and a National Gala—see speakers, schedule, sponsorships, and how to register.">
+	<meta property="og:image" content="/imgs/hero-banner.jpg">
+
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="FCNC | Annual Leadership Convention & National Gala 2025">
+	<meta name="twitter:description" content="Keynotes, breakout sessions, and a National Gala—see speakers, schedule, sponsorships, and how to register.">
+	<meta name="twitter:image" content="/imgs/hero-banner.jpg">
+
+	<!-- Misc -->
+	<meta name="theme-color" content="#3A57A7">
+	<meta name="robots" content="index, follow">
+
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
