Change: Keynote to Distinguished

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 			<h2>Event</h2>
 			<div class="holder-blue">
 				<div class="left-column">
-					<h3>2025 convention keynote speakers</h3>
+					<h3>2025 Convention Distinguished Speakers</h3>
 					<p class="speakers-intro">
-						Meet the 2025 keynote lineup—policymakers, academics, healthcare leaders, and community
+						Meet the 2025 distinguished lineup—policymakers, academics, healthcare leaders, and community
 						advocates who are shaping Filipino-Canadian leadership across the country. Explore their
-						stories, learn from their insights, and get inspired by the work they’re doing in government,
-						education, and the non‑profit sector.
+						stories, learn from their insights, and get inspired by the work they're doing in government,
+						education, and the non-profit sector.
 					</p>
 					<!-- Keynote Speakers start here. -->
 					<div class="keynote-speakers">
