--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
 
 	<section class="full-width-grey" id="sponsorship">
 		<section class="work-experience container">
-			<h2>
+			<!-- <h2>
 				For Sponsorship And Registration:
-			</h2>
-			<h3 class="subtitle">Sponsorship Packages</h3>
-			<div class="jobs">
+			</h2> -->
+			<!-- <h3 class="subtitle">Sponsorship Packages</h3> -->
+			<!-- <div class="jobs">
 				<article>
 					<h3 class="sponsor-price">
 						<img src="imgs/gold-icon.svg" alt="Gold Sponsor" class="sponsor-icon">
@@ -307,8 +307,11 @@
 					</ul>
 				</article>
 
-			</div>
-			<h3 class="subtitle">Please Contact:</h3>
+			</div> -->
+			<!-- <h3 class="subtitle">Event Contact:</h3> -->
+			  <h2>
+				Event Coordinator Contact
+			</h2>
 			<div class="jobs leaders">
 				<article class="box-leader">
 
