--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
 						</div>
 					</div>
 
-					<hr class="speaker-divider">
+					<!-- <hr class="speaker-divider">
 					<h3 class="mb">2025 Program</h3>
 					<p class="program-desc">From morning keynotes to an unforgettable Gala evening—see the full program
 						and make the most of your convention experience.</p>
 					<div class="call-to-action">
 						<a href="/imgs/FCNC-Program-Schedule-ver3.pdf" target="_blank"
 							class="button outline schedule-btn_">View Full Program Schedule</a>
-					</div>
+					</div> -->
 				</div>
 				<!-- <div class="right-column">
 					<h3></h3>
