--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</li>
 				<li>
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
-						class="button register-btn_" target="_blank">Register Now</a>
+						class="button register-btn" target="_blank" style="opacity: 0.5;">Sold Out</a>
 				</li>
 			</ul>
 			<a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -89,7 +89,7 @@
 
 				<div class="call-to-action">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
-						class="button register-btn_" target="_blank">Register Now</a>
+						class="button register-btn_" target="_blank" style="opacity: 0.5;">Sold Out</a>
 				</div>
 			</div>
 			<div class="hero-yellow">
@@ -349,7 +349,7 @@
 
 			<div class="call-to-action">
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
-					class="button register-btn_" target="_blank">Register Now</a>
+					class="button register-btn" target="_blank" style="opacity: .5;">Sold Out</a>
 			</div>
 		</section>
 	</section>
@@ -395,13 +395,22 @@
 	</section>
 
 	<!-- Registration Modal -->
-	<div id="registrationModal" class="modal">
+	<!-- <div id="registrationModal" class="modal">
 		<div class="modal-content">
 			<span class="close-modal">&times;</span>
 			<h2 class="title">Registration fee via e-transfer to:</h2>
 			<p class="emailbox"> finance@fcnccanada.org</p>
 		</div>
+	</div> -->
+
+	<div id="registrationModal" class="modal">
+		<div class="modal-content">
+			<span class="close-modal">&times;</span>
+			<h2 class="title">⚠️ We're sorry, registration is now closed.</h2>
+		</div>
 	</div>
+
+	
 
 	<!-- Schedule Modal -->
 	<div id="scheduleModal_" class="modal">
