Updated the navbar

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			<ul id="menu">
 
 				<li>
-					<a href="#schedule">Event Schedule</a>
+					<a href="#schedule">Event</a>
 				</li>
-				<li>
+				<!-- <li>
 					<a href="#sponsorship">For Sponsorship And Registration</a>
-				</li>
+				</li> -->
 				<li>
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
 						class="button register-btn" target="_blank" style="opacity: 0.5;">Sold Out</a>
