--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 				<li>
 					<a href="#schedule">Event</a>
 				</li>
-				<!-- <li>
-					<a href="#sponsorship">For Sponsorship And Registration</a>
-				</li> -->
+				<li>
+					<a href="#sponsorship">Contact</a>
+				</li>
 				<li>
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
 						class="button register-btn" target="_blank" style="opacity: 0.5;">Sold Out</a>
