registration link is removed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<a href="#sponsorship">Contact</a>
 				</li>
 				<li>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
+					<a href="#"
 						class="button register-btn" target="_blank" style="opacity: 0.5;">Sold Out</a>
 				</li>
 			</ul>
@@ -89,7 +89,7 @@
 
 				<div class="call-to-action">
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
-						class="button register-btn_" target="_blank" style="opacity: 0.5;">Sold Out</a>
+						class="button register-btn" target="_blank" style="opacity: 0.5;">Sold Out</a>
 				</div>
 			</div>
 			<div class="hero-yellow">
@@ -348,7 +348,7 @@
 				Limited spots available!</p>
 
 			<div class="call-to-action">
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLSd50wJD9_LMF96M9_-lmBgIUL3Ome9Zpx8FtGlXrQAeI9CLfA/viewform?usp=dialog"
+				<a href="#"
 					class="button register-btn" target="_blank" style="opacity: .5;">Sold Out</a>
 			</div>
 		</section>
