--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 					<a href="#schedule">Event</a>
 				</li>
 				<li>
+					<a href="#program-schedule">Program Schedule</a>
+				</li>
+				<li>
 					<a href="#sponsorship">Contact</a>
 				</li>
 				<li>
@@ -237,7 +240,7 @@
 						</div>
 					</div>
 
-					<hr class="speaker-divider">
+					<hr class="speaker-divider" id="program-schedule">
 					<h3 class="mb">2025 Program</h3>
 					<p class="program-desc">From morning keynotes to an unforgettable Gala evening—see the full program
 						and make the most of your convention experience.</p>
